game-box: fix store icons positions on mobile

--- a/sass/game-box/_mobile.scss
+++ b/sass/game-box/_mobile.scss
@@ -40,6 +40,7 @@
 
 .store-icons{
     display: flex;
+    margin-bottom: 1.5vw;
 }
 
 .store-icon {
